# openvino

src/common/snippets/src/: generator.cpp
src/common/snippets/src/op/: subgraph.cpp
src/common/snippets/src/pass/: assign_registers.cpp  collapse_subgraph.cpp
src/core/include/openvino/pass/: serialize.hpp
src/plugins/intel_cpu/src/: plugin.cpp
src/plugins/intel_cpu/src/emitters/: cpu_generator.cpp  jit_eltwise_emitters.cpp  jit_eltwise_emitters.hpp  jit_snippets_emitters.hpp
src/plugins/intel_cpu/src/nodes/: subgraph.cpp
src/tests/functional/plugin/cpu/: CMakeLists.txt
src/tests/functional/plugin/cpu/custom_tests/: gather_snippets_tmp.cpp
